[package]
name = "rafflen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[profile.dev]
opt-level = 3

[dependencies]
rand = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image", "ttf"]

[build-dependencies]
winres = "0.1.12"
